# argo_arduino

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
ext/: CMakeLists.txt  toolchainFlags.patch
lib/: CMakeLists.txt
src/: CMakeLists.txt
src/arduino_hardware/: ArduinoHardware.cpp  ArduinoHardware.hpp  CMakeLists.txt  arduino_hardware.cpp  arduino_hardware.hpp  encoder_impl.hpp
src/arduino_interface/: ArduinoGlobals.cpp  ArduinoGlobals.hpp  ArduinoInterface.hpp  CMakeLists.txt  Encoder.cpp  Encoder.hpp  arduino_enums.hpp  arduino_hardware.cpp  arduino_hardware.hpp  arduino_interface.hpp  arduino_lib_wrapper.cpp  arduino_lib_wrapper.hpp  arduino_string.hpp  encoder_interface.hpp  pinTimingData.cpp  pinTimingData.hpp
src/argo_deadman_base/: CMakeLists.txt  argo_deadman_base.cpp
src/argo_deadman_remote/: CMakeLists.txt  argo_deadman_remote.cpp
src/argo_rc/: CMakeLists.txt  PidController.cpp  PidController.hpp  SerialComms.cpp  SerialComms.hpp  argo_encoder.cpp  argo_encoder.hpp  argo_rc.cpp  argo_rc_lib.cpp  argo_rc_lib.hpp
src/encoder_interface/: encoder_interface.hpp
src/lib_wrappers/: CMakeLists.txt  Distance.hpp  Length.hpp  MinString.hpp  Speed.hpp  Time.hpp  Timer.hpp  cstring_wrapper.hpp  encoder_impl.hpp  encoder_interface.cpp  encoder_interface.hpp  move.hpp  pair.hpp  unique_ptr.hpp
test/: CMakeLists.txt  CMakeLists.txt.in  EncoderTest.cpp  PidControllerTest.cpp  SerialCommsTest.cpp  argo_rc_encoder_test.cpp  argo_rc_lib_test.cpp  example.cpp  mock_arduino.hpp  mock_encoder.hpp
